# punto-de-venta-uvm

./: .gitignore  README.md  alembic.ini  home_content.py  main.py  modules.py  pyproject.toml  requirements.txt  test.db  test_components.py  test_controllers.py  test_floatcounter.py
alembic/: env.py
app/: main.py  test-controllers.py  test_flet.py
business_classes/: Product.py  PurchaseDetail.py  Role.py  user.py
business_objects/: Customer.py  Product.py  Purchase.py  PurchaseDetail.py  Sale.py  SaleDetail.py  SaleDetails.py  Supplier.py  product_properties.py
classes/: Product.py
components/: EditableField.py  ProductCard.py  ProductList.py  ProductListView.py  ShoppingCart.py  counters.py  product_cards.py  searchers.py
controllers/: controllers.py  repository.py
database/: backup.sql  backup_script.py  connection.py  diseño.sql  models.py
interface/: ControllerInterface.py  observer.py  observer_practice.py  single_observer.py
interfaces/: ControllerInterface.py  interfaces.py
inventory/: ProductForm.py  ProductTable.py  counters.py  searchers.py
inventory_view/: ProductForm.py  ProductTable.py  searchers.py  view_section.py
models/: models.py
modules/: modules.py
naveasey/: naveasey.py
navigation/: AppbarActions.py  PageEvents.py  initializer.py  navigation_state_manager.py  navigation_structures.py  on_change_events.py
package_navigation/: Module.py  initializer.py  navigation_state_manager.py  navigation_structures.py  on_change_events.py
purchase_view/: ItemList.py  ProductCard.py  ProductDTO.py  ProductFormCard.py  context.py  (+9 more)
(+243 files in other folders)
