[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Carlos Alberto Baltazar Hinojosa <carval.17080998@outlook.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.30"
mysql-connector-python = "^8.4.0"
flet = "^0.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
